# notebook_builder

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  template.txt  template_nlp.txt
output/: DQN.ipynb  DQN.py  DQN_All.ipynb  DQN_All.py  Enums.ipynb  Enums.py  LR.ipynb  LR.py  NNs.ipynb  NNs.py  Natural Language Processing 1.ipynb  Natural Language Processing 1.py  Natural Language Processing.ipynb  Natural Language Processing.py  Perceptron.ipynb  Perceptron.py  markov_decision_processes.ipynb  markov_decision_processes.py  mdp_1.ipynb  mdp_1.py
output/data-science/: 3 Data Indexing and Selection.py  3 Operating on Data in Pandas.py  4 Simple Line Plots.py  4 Simple Scatter Plots.ipynb  4 Simple Scatter Plots.py  4 Visualization with Matplotlib.py  5 Overview Machine Learning.ipynb  5 Overview Machine Learning.py  data_science_1.txt
output/green-tea/: Chapter 1 The way of the program-workshop.py  Chapter 1 The way of the program.ipynb  Chapter 1 The way of the program.py  Chapter 1 The way of the program_translated.py  Chapter 2 Variables.ipynb  Chapter 2 Variables.py  Chapter 3 Functions.ipynb  Chapter 3 Functions.py  Chapter 4 Interface Design-gpt-3.5.ipynb  Chapter 4 Interface Design-gpt-3.5.py  Chapter 4 Interface Design.ipynb  Chapter 4 Interface Design.py  Chapter 5 Conditionals and Recursion.ipynb  Chapter 5 Conditionals and Recursion.py  Chapter 6 Fruitful Functions-gpt-3.5.ipynb  Chapter 6 Fruitful Functions-gpt-3.5.py  Chapter 7 Iteration.ipynb  Chapter 7 Iteration.py  Chapter 8 Strings.ipynb  Chapter 8 Strings.py  RL-DQN.ipynb  RL-DQN.py  (+35 more)
(+18 files in other folders)
