[metadata]
name = notebook_builder
version = 0.0.1
author = Dr. Kyrill Schmid
author_email = kyrillschmid@web.de
description = A package to build notebooks for course
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kyrillschmid/notebook_builder
project_urls =
    Bug Tracker = https://github.com/kyrillschmid/notebook_builder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where=src

[options.entry_points]
console_scripts:
    notebook-builder = notebook_builder.__main__:main